<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount_label">Bill Amount</string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>

    <string name="tip_label">Tip</string>
    <string name="tip">$0.00</string>

    <string name="total_label">Total</string>
    <string name="total">$0.00</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>
</resources>