<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billAmountLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/bill_amount_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/billAmountEditText"
        app:layout_constraintEnd_toStartOf="@+id/billAmountEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLable"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/percentLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="28dp"
        android:text="@string/tip_percent_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentTextView"
        app:layout_constraintEnd_toStartOf="@+id/percentTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/tip_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLable" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="85dp"
        android:text="@string/tip_percent"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/percentDownBtn"
        app:layout_constraintStart_toEndOf="@+id/percentLable"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tip"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

    <TextView
        android:id="@+id/totalLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/total_label"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLable" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/total"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/tipTextView"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percentDownBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttons_width_height"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="40dp"
        android:background="@color/color_primary"
        android:text="@string/decrease"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/tipTextView"
        app:layout_constraintEnd_toStartOf="@+id/percentUpBtn"
        app:layout_constraintStart_toEndOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percentUpBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttons_width_height"
        android:layout_marginEnd="22dp"
        android:background="@color/color_primary"
        android:text="@string/increase"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentDownBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentDownBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>